--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -15,6 +15,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
+                android:visibility="invisible"
                 android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -116,6 +117,7 @@
                                         android:layout_weight="1"
                                         android:background="@drawable/ll_design_read"/>
                                     <Button
+                                        android:id="@+id/btnFeedback"
                                         android:layout_marginTop="10dp"
                                         android:layout_marginLeft="5dp"
                                         android:textSize="14sp"
@@ -136,6 +138,7 @@
                                 android:layout_weight="0.5"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/imgQrCode"
                                     android:layout_marginLeft="10dp"
                                     android:background="@android:color/white"
                                     android:src="@drawable/demo_qr"
@@ -201,6 +204,8 @@
                         android:layout_height="match_parent"
                         android:fillViewport="true">
                         <EditText
+                            android:clickable="false"
+                            android:editable="false"
                             android:textColor="#3b3b3b"
                             android:textSize="14sp"
                             android:padding="10dp"
