--- a/app/src/main/res/layout/fragment_monthly.xml
+++ b/app/src/main/res/layout/fragment_monthly.xml
@@ -14,6 +14,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/llMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -239,10 +245,256 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.7"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/ll6"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/shelf_bg">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/pin_bg"/>
+                    <LinearLayout
+                        android:gravity="center|top"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        >
+                        <LinearLayout
+                            android:background="@drawable/header_bg"
+                            android:layout_width="120dp"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:id="@+id/tv6"
+                                android:singleLine="true"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv6"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.7"/>
+            </LinearLayout>
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/ll7"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/shelf_bg">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/pin_bg"/>
+                    <LinearLayout
+                        android:gravity="center|top"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        >
+                        <LinearLayout
+                            android:background="@drawable/header_bg"
+                            android:layout_width="120dp"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:id="@+id/tv7"
+                                android:singleLine="true"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv7"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.7"/>
+            </LinearLayout>
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/ll8"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/shelf_bg">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/pin_bg"/>
+                    <LinearLayout
+                        android:gravity="center|top"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        >
+                        <LinearLayout
+                            android:background="@drawable/header_bg"
+                            android:layout_width="120dp"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:id="@+id/tv8"
+                                android:singleLine="true"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv8"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.7"/>
+            </LinearLayout>
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/ll9"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/shelf_bg">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/pin_bg"/>
+                    <LinearLayout
+                        android:gravity="center|top"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        >
+                        <LinearLayout
+                            android:background="@drawable/header_bg"
+                            android:layout_width="120dp"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:id="@+id/tv9"
+                                android:singleLine="true"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv9"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.7"/>
+            </LinearLayout>
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/ll10"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="145dp"
+                android:background="@drawable/shelf_bg">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.1"
+                        android:src="@drawable/pin_bg"/>
+                    <LinearLayout
+                        android:gravity="center|top"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        >
+                        <LinearLayout
+                            android:background="@drawable/header_bg"
+                            android:layout_width="120dp"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:id="@+id/tv10"
+                                android:singleLine="true"
+                                android:textColor="@android:color/white"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv10"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.7"/>
+            </LinearLayout>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shelf_btm"/>
+        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llLoader"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
