--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -228,5 +228,9 @@
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="1.5dp"
+            android:background="@drawable/shadow"/>
     </FrameLayout>
 </LinearLayout>
