--- a/app/src/main/res/layout/dialog_feedback.xml
+++ b/app/src/main/res/layout/dialog_feedback.xml
@@ -35,6 +35,7 @@
             android:layout_marginRight="10dp"
           >
             <EditText
+                android:id="@+id/etFeedbackContent"
                 android:padding="5dp"
                 android:background="#fff"
                 android:textSize="14sp"
