--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -160,6 +160,31 @@
                 android:textColor="#262626"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/llFeedback"
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            android:padding="5dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imgFeedback"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_feedback"/>
+            <TextView
+                android:id="@+id/tvFeedback"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:text="Feedback"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#262626"/>
+        </LinearLayout>
+        <LinearLayout
             android:id="@+id/llShare"
             android:background="@android:color/white"
             android:layout_width="match_parent"
@@ -239,6 +264,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"/>
+        android:layout_weight="0.15"/>
 </LinearLayout>
 </LinearLayout>
