--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/tvForgetPass"
                 android:textColor="@android:color/white"
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
